# teclang

./: CMakeLists.txt  build.sh  count.sh  debug.sh
core/: Context.cpp  Context.h  ContextScope.h  Debug.cpp  Debug.h  Generator.cpp  Generator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  defs.h  main.cpp
core/debug/: Console.cpp  Console.h
generators/: Constructor.h  Function.h  TypeDef.h
generators/types/: Array.h  Int.h  String.h  System.h
parsers/: BinaryOp.cpp  BinaryOp.h  Body.cpp  Body.h  EnumDef.cpp  EnumDef.h  Expression.cpp  Expression.h  Function.cpp  Function.h  FunctionArg.cpp  FunctionArg.h  Identifier.cpp  Identifier.h  Literal.cpp  Literal.h  Type.cpp  Type.h  TypeDef.cpp  TypeDef.h
parsers/expressions/: Match.cpp  Match.h
parsers/statements/: Break.h  Continue.h  ForStatement.cpp  ForStatement.h  FunctionCall.cpp  FunctionCall.h  IfStatement.cpp  IfStatement.h  Return.cpp  Return.h  Statement.cpp  Statement.h  VariableDecl.cpp  VariableDecl.h  VariableRef.cpp  VariableRef.h
source/: constructs.lang  func.lang  match.lang  milestone_01.lang  milestone_02.lang  milestone_03.lang  milestone_04.lang  milestone_05.lang  milestone_06.lang  milestone_07.lang  milestone_08.lang  playground.lang  simple.lang  test_01.lang  types.lang  validator.lang  vars.lang
structure/: Expr.h  Function.cpp  Function.h  FunctionArg.h  TypeDef.cpp  TypeDef.h
structure/constants/: BoolValue.h  Constants.h  DoubleValue.h  IntValue.h  StringValue.cpp  StringValue.h
structure/expressions/: Match.cpp  Match.h  (+2 more)
test/: main_array.cpp  struct_array.cpp  struct_array.ll
(+21 files in other folders)
